client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: 916863632898.dkr.ecr.us-east-1.amazonaws.com/client:latest
          ports:
            - containerPort: 4173
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    app: client
  ports:
    - port: 80
      targetPort: 4173
  type: LoadBalancer
